--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="header">
@@ -25,23 +28,23 @@
         <div class="img-placeholder">this is a placeholder for an image</div>
     </div>
     <div class="features-section">
-        <h2>Some random information</h2>
+        <h2>Some random information.</h2>
         <div class="cards">
             <div class="card-and-text">
                 <div class="card"></div>
-                <p1 class="card-text">this is some subtext under an illustration or image</p1>
+                <p class="card-text">this is some subtext under an illustration or image</p>
             </div>
             <div class="card-and-text">
                 <div class="card"></div>
-                <p1 class="card-text">this is some subtext under an illustration or image</p1>
+                <p class="card-text">this is some subtext under an illustration or image</p>
             </div>
             <div class="card-and-text">
                 <div class="card"></div>
-                <p1 class="card-text">this is some subtext under an illustration or image</p1>
+                <p class="card-text">this is some subtext under an illustration or image</p>
             </div>
             <div class="card-and-text">
                 <div class="card"></div>
-                <p1 class="card-text">this is some subtext under an illustration or image</p1>
+                <p class="card-text">this is some subtext under an illustration or image</p>
             </div>
         </div>
         </div>
@@ -51,8 +54,10 @@
         <div class="person">-Thore, God of Thunder</div>
     </div>
     <div class="cta-section">
-        <div class="statement">Call to action! It's time!</div>
-        <div class="statement-detail">Sign up for our product by clicking that button rigth over there!</div>
+        <div class="cta-text">
+            <div class="statement">Call to action! It's time!</div>
+            <div class="statement-detail">Sign up for our product by clicking that button rigth over there!</div>
+        </div>
         <button class="cta-button">Sign up</button>
     </div>
     <div class="footer">Copywrite The Odin Project 2023</div>
